@@ -13,6 +13,7 @@ import edu.colorado.phet.capacitorlab.CLImages;
 import edu.colorado.phet.capacitorlab.CLStrings;
 import edu.colorado.phet.capacitorlab.model.CLModelViewTransform3D;
 import edu.colorado.phet.capacitorlab.model.Voltmeter;
+import edu.colorado.phet.capacitorlab.view.CLLocationDragHandler;
 import edu.colorado.phet.capacitorlab.view.DoubleDisplayNode;
 import edu.colorado.phet.common.phetcommon.math.Point3D;
 import edu.colorado.phet.common.phetcommon.util.DefaultDecimalFormat;
@@ -94,7 +95,7 @@ public class VoltmeterBodyNode extends PhetPNode {
         
         // interactivity
         addInputEventListener( new CursorHandler() );
-        addInputEventListener( new CLModelElementDragHandler( this, mvt ) {
+        addInputEventListener( new CLLocationDragHandler( this, mvt ) {
             
             protected Point3D getModelLocation() {
                 return voltmeter.getBodyLocationReference();
