@@ -9,6 +9,7 @@ import edu.colorado.phet.capacitorlab.CLImages;
 import edu.colorado.phet.capacitorlab.model.CLModelViewTransform3D;
 import edu.colorado.phet.capacitorlab.model.Voltmeter;
 import edu.colorado.phet.capacitorlab.shapes.VoltmeterShapeFactory;
+import edu.colorado.phet.capacitorlab.view.CLLocationDragHandler;
 import edu.colorado.phet.common.phetcommon.math.Point3D;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
@@ -75,7 +76,7 @@ public abstract class VoltmeterProbeNode extends PhetPNode {
         
         @Override
         protected void addDragHandler( final Voltmeter voltmeter, final CLModelViewTransform3D mvt ) {
-            addInputEventListener( new CLModelElementDragHandler( this, mvt ) {
+            addInputEventListener( new CLLocationDragHandler( this, mvt ) {
                 
                 protected Point3D getModelLocation() {
                     return voltmeter.getPositiveProbeLocationReference();
@@ -108,7 +109,7 @@ public abstract class VoltmeterProbeNode extends PhetPNode {
         
         @Override
         protected void addDragHandler( final Voltmeter voltmeter, final CLModelViewTransform3D mvt ) {
-            addInputEventListener( new CLModelElementDragHandler( this, mvt ) {
+            addInputEventListener( new CLLocationDragHandler( this, mvt ) {
                 
                 protected Point3D getModelLocation() {
                     return voltmeter.getNegativeProbeLocationReference();
